// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marqueeDirection renders 0 1`] = `
Array [
  .c0 {
  marquee-direction: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders function 1`] = `
Array [
  .c0 {
  marquee-direction: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee-direction: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders negative number 1`] = `
Array [
  .c0 {
  marquee-direction: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee-direction: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-direction: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee-direction: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-direction: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-direction: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-direction: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-direction: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    marquee-direction: July;
  }
}

@media April {
  .c0 {
    marquee-direction: August;
  }
}

@media January {
  .c0 {
    marquee-direction: September;
  }
}

@media April {
  .c0 {
    marquee-direction: November;
  }
}

@media June {
  .c0 {
    marquee-direction: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee-direction: July;
  }
}

@media April {
  .c0 {
    marquee-direction: August;
  }
}

@media January {
  .c0 {
    marquee-direction: September;
  }
}

@media April {
  .c0 {
    marquee-direction: November;
  }
}

@media June {
  .c0 {
    marquee-direction: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-direction: January;
  }
}

@media April {
  .c0 {
    marquee-direction: December;
  }
}

@media January {
  .c0 {
    marquee-direction: April;
  }
}

@media April {
  .c0 {
    marquee-direction: May;
  }
}

@media June {
  .c0 {
    marquee-direction: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-direction: January;
  }
}

@media April {
  .c0 {
    marquee-direction: December;
  }
}

@media January {
  .c0 {
    marquee-direction: April;
  }
}

@media April {
  .c0 {
    marquee-direction: May;
  }
}

@media June {
  .c0 {
    marquee-direction: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders postitive number 1`] = `
Array [
  .c0 {
  marquee-direction: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders string 1`] = `
Array [
  .c0 {
  marquee-direction: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeDirection renders valid theme path 1`] = `
Array [
  .c0 {
  marquee-direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
